# SDx-v0

./: .env.example  README.md  context.md  pyproject.toml  vercel.json
MASDA/: __init__.py
MASDA/agents/: __init__.py  base.py  condenser.py  cost_agent.py  infra_agent.py  intent_parser.py  security_agent.py
MASDA/api/: __init__.py  deps.py  main.py  routes.py
MASDA/constants/: __init__.py  common.py
MASDA/llm/: __init__.py  base.py  factory.py  gemini_adapter.py  openai_adapter.py
MASDA/models/: __init__.py
MASDA/models/data/: __init__.py  cost.py  infra.py  security.py
MASDA/models/input/: __init__.py  intent.py
MASDA/models/output/: __init__.py  infra.py  infraedge.py  infranode.py  nodecost.py  security.py
MASDA/models/state/: __init__.py  work_order.py
MASDA/orchestrator/: __init__.py  convergence.py  moderator.py  policies.py
MASDA/state/: __init__.py  repository.py
api/: index.py
draft/services/: geminiService.ts
frontend/: UI-from-google-stitch.tsx  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/UI/: budget.tsx  compliance.tsx  infra-ui-base.tsx  toplogy.tsx
frontend/src/: App.tsx  index.css
frontend/src/components/: Header.tsx  Icon.tsx  Sidebar.tsx  index.ts
frontend/src/pages/: ArchitectureDesigner.tsx  AuditLogs.tsx  BlueprintApproval.tsx  ComplianceCenter.tsx  CostAnalysis.tsx  Dashboard.tsx  ProjectInitiation.tsx  TopologyMap.tsx  index.ts
frontend/src/services/: gemini.ts  schemas.ts  types.ts
