[project]
name = "masda"
version = "0.1.0"
description = "Multi-Agent Infra Arch Solution Design Agent - AI-driven Infrastructure as a Service"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "MASDA Team" }]
keywords = ["ai", "infrastructure", "multi-cloud", "aws", "gcp", "azure", "fastapi"]

dependencies = [
    "fastapi>=0.109.0",
    "google-genai>=1.60.0",
    "openai>=1.10.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[project.scripts]
masda = "MASDA.api.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
